--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "electron .",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "electron": "^32.2.0",
     "tailwindcss": "^3.4.11",
     "vite": "^5.4.1"
   },
